tests/fixtures/negative/truncation/010_jsx_tag_eof.js
// Expected error: unterminated JSX tag.
const value = <A></A
